--- a/D3Digger/DeclTry/DeclTry.vcxproj
+++ b/D3Digger/DeclTry/DeclTry.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{3FBD2A95-D352-42F0-828F-EDB83C114809}</ProjectGuid>
+    <ProjectGuid>{838AAB64-918A-44B9-8CB7-E17539BCD0BE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>d3d9_gen</RootNamespace>
+    <RootNamespace>DeclTry</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -46,7 +46,6 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ForcedIncludeFiles>stdafx.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -70,41 +69,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="CubeTexture.h" />
-    <ClInclude Include="D3D.h" />
-    <ClInclude Include="Device.h" />
-    <ClInclude Include="IndexBuffer.h" />
-    <ClInclude Include="PixelShader.h" />
-    <ClInclude Include="StateBlock.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="Surface.h" />
-    <ClInclude Include="SwapChain.h" />
-    <ClInclude Include="Texture.h" />
-    <ClInclude Include="VertexBuffer.h" />
-    <ClInclude Include="VertexDeclaration.h" />
-    <ClInclude Include="VertexShader.h" />
-    <ClInclude Include="Volume.h" />
-    <ClInclude Include="VolumeTexture.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CubeTexture.cpp" />
-    <ClCompile Include="D3D.cpp" />
-    <ClCompile Include="Device.cpp" />
-    <ClCompile Include="IndexBuffer.cpp" />
-    <ClCompile Include="PixelShader.cpp" />
-    <ClCompile Include="StateBlock.cpp" />
+    <ClCompile Include="DeclTry.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Surface.cpp" />
-    <ClCompile Include="SwapChain.cpp" />
-    <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="VertexBuffer.cpp" />
-    <ClCompile Include="VertexDeclaration.cpp" />
-    <ClCompile Include="VertexShader.cpp" />
-    <ClCompile Include="Volume.cpp" />
-    <ClCompile Include="VolumeTexture.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
