--- a/D3Digger/DeclTry/DeclTry.vcxproj
+++ b/D3Digger/DeclTry/DeclTry.vcxproj
@@ -69,6 +69,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="pimpl.h" />
+    <ClInclude Include="proxy.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
