--- a/D3Digger/DeclTry/DeclTry.vcxproj.filters
+++ b/D3Digger/DeclTry/DeclTry.vcxproj.filters
@@ -18,10 +18,10 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="proxy.h">
+    <ClInclude Include="pimpl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="pimpl.h">
+    <ClInclude Include="shared.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
