--- a/D3Digger/d3d9_gen/d3d9_gen.vcxproj.filters
+++ b/D3Digger/d3d9_gen/d3d9_gen.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClCompile Include="ProxyBase_IDirect3DVolume9.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
