--- a/D3Digger/DeclTry/DeclTry.vcxproj
+++ b/D3Digger/DeclTry/DeclTry.vcxproj
@@ -70,7 +70,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pimpl.h" />
-    <ClInclude Include="proxy.h" />
+    <ClInclude Include="shared.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
@@ -79,6 +79,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\d3d9_gen\d3d9_gen.vcxproj">
+      <Project>{3fbd2a95-d352-42f0-828f-edb83c114809}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
