wraps/unwraps work extRefCount in wraps not implemented QueryInterface not implemented detach not implemented

--- a/D3Digger/D3D9/D3D9.vcxproj
+++ b/D3Digger/D3D9/D3D9.vcxproj
@@ -76,6 +76,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ProxyBase.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
@@ -88,7 +89,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="new_stuff.cpp" />
+    <ClCompile Include="Global.cpp" />
+    <ClCompile Include="ProxyBase.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -96,14 +98,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="exports.def" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\d3d9_gen\d3d9_gen.vcxproj">
-      <Project>{3fbd2a95-d352-42f0-828f-edb83c114809}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\d3d9_impl\d3d9_impl.vcxproj">
-      <Project>{5c5a49a3-a1e6-4afb-8985-3b07d03c4d58}</Project>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
