--- a/D3Digger/D3D9/D3D9.vcxproj
+++ b/D3Digger/D3D9/D3D9.vcxproj
@@ -77,6 +77,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ProxyBase.h" />
+    <ClInclude Include="ProxyImpl.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
