--- a/D3Digger/_Include/common.props
+++ b/D3Digger/_Include/common.props
@@ -5,6 +5,10 @@
   <PropertyGroup>
     <IncludePath>$(SolutionDir)_Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
-  <ItemDefinitionGroup />
+  <ItemDefinitionGroup>
+    <ClCompile>
+      <AdditionalOptions>-Zm256 %(AdditionalOptions)</AdditionalOptions>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
