--- a/D3Digger/D3D9/D3D9.vcxproj.filters
+++ b/D3Digger/D3D9/D3D9.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="ProxyImpl_Device.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GlobalImpl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -47,9 +50,6 @@
     <ClCompile Include="ProxyBase.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Global.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="ProxyImpl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -57,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ProxyImpl_Device.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GlobalImpl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
