--- a/D3Digger/_Include/_Include.vcxproj
+++ b/D3Digger/_Include/_Include.vcxproj
@@ -17,6 +17,7 @@
     <ClInclude Include="d3d9\def.h" />
     <ClInclude Include="d3d9\Global.h" />
     <ClInclude Include="d3d9\IProxy.h" />
+    <ClInclude Include="d3d9\IProxyExt.h" />
     <ClInclude Include="d3d9\undef.h" />
     <ClInclude Include="d3d9\wrap.h" />
   </ItemGroup>
