--- a/D3Digger/D3D9/D3D9.vcxproj
+++ b/D3Digger/D3D9/D3D9.vcxproj
@@ -57,7 +57,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ModuleDefinitionFile>exports.def</ModuleDefinitionFile>
-      <AdditionalDependencies>D3dx9.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>D3d9.lib;D3dx9.lib;dxguid.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -82,6 +82,7 @@
     <ClInclude Include="ProxyImpl.h" />
     <ClInclude Include="ProxyImpl_Device.h" />
     <ClInclude Include="ProxyImpl_IndexBuffer.h" />
+    <ClInclude Include="ProxyImpl_Surface.h" />
     <ClInclude Include="ProxyImpl_Texture.h" />
     <ClInclude Include="ProxyImpl_VertexBuffer.h" />
     <ClInclude Include="stdafx.h" />
@@ -101,6 +102,7 @@
     <ClCompile Include="ProxyImpl.cpp" />
     <ClCompile Include="ProxyImpl_Device.cpp" />
     <ClCompile Include="ProxyImpl_IndexBuffer.cpp" />
+    <ClCompile Include="ProxyImpl_Surface.cpp" />
     <ClCompile Include="ProxyImpl_Texture.cpp" />
     <ClCompile Include="ProxyImpl_VertexBuffer.cpp" />
     <ClCompile Include="stdafx.cpp">
