--- a/D3Digger/_Include/_Include.vcxproj
+++ b/D3Digger/_Include/_Include.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -11,13 +11,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="common\bytes.h" />
     <ClInclude Include="common\common.h" />
     <ClInclude Include="common\interface.h" />
+    <ClInclude Include="common\signals.h" />
     <ClInclude Include="d3d9\decl.h" />
     <ClInclude Include="d3d9\def.h" />
     <ClInclude Include="d3d9\Global.h" />
     <ClInclude Include="d3d9\IProxy.h" />
     <ClInclude Include="d3d9\IProxyExt.h" />
+    <ClInclude Include="d3d9\Methods.h" />
     <ClInclude Include="d3d9\undef.h" />
     <ClInclude Include="d3d9\wrap.h" />
   </ItemGroup>
@@ -31,12 +34,14 @@
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
