--- a/D3Digger/D3D9/D3D9.vcxproj
+++ b/D3Digger/D3D9/D3D9.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -20,12 +20,14 @@
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -77,6 +79,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Client\IExectuor.h" />
+    <ClInclude Include="Client\IGlobal.h" />
+    <ClInclude Include="Client\IProxy.h" />
+    <ClInclude Include="Client\IProxyFactory.h" />
+    <ClInclude Include="Client\IProxyMap.h" />
     <ClInclude Include="GlobalImpl.h" />
     <ClInclude Include="ProxyBase.h" />
     <ClInclude Include="ProxyImpl.h" />
@@ -98,6 +105,7 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="GlobalImpl.cpp" />
+    <ClCompile Include="Methods.cpp" />
     <ClCompile Include="ProxyBase.cpp" />
     <ClCompile Include="ProxyImpl.cpp" />
     <ClCompile Include="ProxyImpl_Device.cpp" />
